test/semantic_error/undeclared_var.c
/*
Semantic error: Variable 'a' is not declared at line 5 column 6
*/
int main(){
    a = 1;
    return 0;
}